fix hamburger visibility on mobile

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -119,7 +119,7 @@
     cursor: pointer;
 }
 
-@include mobile {
+@media screen and (max-width: 600px) {
     .main_navigation__hamburger {
         display: block;
     }
